--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 			    accessibility: false,
 			   	infinite: false,
 			   	arrows: false,
-			   	draggable:false
+			   	draggable:false,
+				swipe : false
 			});
 
 			$('.btnNxt').click(function(){
