--- a/quiz.html
+++ b/quiz.html
@@ -151,7 +151,8 @@
 			    accessibility: false,
 			   	infinite: false,
 			   	arrows: false,
-			   	draggable:false
+			   	draggable:false,
+				swipe : false
 			});
 
 			$('.btnNext').click(function(){
