--- a/quiz.html
+++ b/quiz.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<title>I/O Quiz</title>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/slick.css">
 	<link rel="stylesheet" type="text/css" href="css/ripple.css">
 	
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/slick.js"></script>
 </head>
 <body>
